# ptop3

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  codecov.yml  pyproject.toml
.github/instructions/: code-review.instructions.md
.github/workflows/: ci.yml  claude-code-review.yml  claude-quality-gate.yml  publish-pypi.yml  publish-testpypi.yml  release.yml
ptop3/: __init__.py  __main__.py  monitor.py  sudo_config.py
ptop3/scripts/: drop_caches.py  swap_clean.py
tests/: conftest.py  test_drop_caches.py  test_monitor.py  test_sudo_config.py  test_swap_clean.py
